create lesson service and add uuid package

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,5 @@
   "synchronize": true,
   "useUnifiedTopology": true,
   "logging": true,
-  "entities": ["dist/**/*.entity.{js,ts}"]
+  "entities": ["dist/**/entity/*.entity.{js,ts}"]
 }
